# gstreamer-plugin-xwm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
data/: gstreamer-plugin-xwm.xml
packaging/: gstreamer-plugin-xwm.spec
src/: lib.rs  typefind.rs
src/fuzdemux/: imp.rs  mod.rs
src/xwmademux/: imp.rs  mod.rs
tests/: xwmademux.rs
